--- a/Dockerfile-ubuntu.template
+++ b/Dockerfile-ubuntu.template
@@ -1,10 +1,4 @@
-#
-# NOTE: THIS DOCKERFILE IS GENERATED VIA "apply-templates.sh"
-#
-# PLEASE DO NOT EDIT IT DIRECTLY.
-#
-
-FROM buildpack-deps:focal-scm
+FROM buildpack-deps:{{ env.variant }}-scm
 
 # gcc for cgo
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -19,51 +13,53 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 ENV PATH /usr/local/go/bin:$PATH
 
-ENV GOLANG_VERSION 1.16
+ENV GOLANG_VERSION {{ .version }}
 
 RUN set -eux; \
 	\
 	dpkgArch="$(dpkg --print-architecture)"; \
 	url=; \
 	case "${dpkgArch##*-}" in \
-		'amd64') \
-			url='https://storage.googleapis.com/golang/go1.16.linux-amd64.tar.gz'; \
-			sha256='013a489ebb3e24ef3d915abe5b94c3286c070dfe0818d5bca8108f1d6e8440d2'; \
+{{
+	[
+		.arches | to_entries[]
+		| .key as $bashbrewArch
+		| (
+			{
+				amd64: "amd64",
+				arm32v5: "armel",
+				arm32v7: "armhf",
+				arm64v8: "arm64",
+				i386: "i386",
+				mips64le: "mips64el",
+				ppc64le: "ppc64el",
+				s390x: "s390x",
+			} | .[$bashbrewArch] // ""
+		) as $dpkgArch
+		| select($dpkgArch != "")
+		| .value
+		| (
+-}}
+		{{ $dpkgArch | @sh }}) \
+{{ if .url then ( -}}
+			url={{ .url | @sh }}; \
+			sha256={{ .sha256 | @sh }}; \
+{{ ) else ( -}}
+			export {{ .env | to_entries | map(.key + "=" + (.value | @sh)) | join(" ") }}; \
+{{ ) end -}}
 			;; \
-		'armel') \
-			export GOARCH='arm' GOARM='5' GOOS='linux'; \
-			;; \
-		'armhf') \
-			url='https://storage.googleapis.com/golang/go1.16.linux-armv6l.tar.gz'; \
-			sha256='d1d9404b1dbd77afa2bdc70934e10fbfcf7d785c372efc29462bb7d83d0a32fd'; \
-			;; \
-		'arm64') \
-			url='https://storage.googleapis.com/golang/go1.16.linux-arm64.tar.gz'; \
-			sha256='3770f7eb22d05e25fbee8fb53c2a4e897da043eb83c69b9a14f8d98562cd8098'; \
-			;; \
-		'i386') \
-			url='https://storage.googleapis.com/golang/go1.16.linux-386.tar.gz'; \
-			sha256='ea435a1ac6d497b03e367fdfb74b33e961d813883468080f6e239b3b03bea6aa'; \
-			;; \
-		'mips64el') \
-			export GOARCH='mips64le' GOOS='linux'; \
-			;; \
-		'ppc64el') \
-			url='https://storage.googleapis.com/golang/go1.16.linux-ppc64le.tar.gz'; \
-			sha256='27a1aaa988e930b7932ce459c8a63ad5b3333b3a06b016d87ff289f2a11aacd6'; \
-			;; \
-		's390x') \
-			url='https://storage.googleapis.com/golang/go1.16.linux-s390x.tar.gz'; \
-			sha256='be4c9e4e2cf058efc4e3eb013a760cb989ddc4362f111950c990d1c63b27ccbe'; \
-			;; \
+{{
+		)
+	] | add
+-}}
 		*) echo >&2 "error: unsupported architecture '$dpkgArch' (likely packaging update needed)"; exit 1 ;; \
 	esac; \
 	build=; \
 	if [ -z "$url" ]; then \
 # https://github.com/golang/go/issues/38536#issuecomment-616897960
 		build=1; \
-		url='https://storage.googleapis.com/golang/go1.16.src.tar.gz'; \
-		sha256='7688063d55656105898f323d90a79a39c378d86fe89ae192eb3b7fc46347c95a'; \
+		url={{ .arches.src.url | @sh }}; \
+		sha256={{ .arches.src.sha256 | @sh }}; \
 		echo >&2; \
 		echo >&2 "warning: current architecture ($dpkgArch) does not have a corresponding Go binary release; will be building from source"; \
 		echo >&2; \
