--- a/Dockerfile-ubuntu.template
+++ b/Dockerfile-ubuntu.template
@@ -5,8 +5,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		g++ \
 		gcc \
 		libc6-dev \
-		libzip \
-		libssl \
+		libzip-dev \
+		libssl-dev \
 		make \
 		pkg-config \
 	&& rm -rf /var/lib/apt/lists/*
